<resources>
    <string name="app_name">Eat it-Server</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Category</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="cart">Cart</string>
    <string name="category_name">Category Name</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="addon_size_name">Addon/Size Name</string>
    <string name="price">price</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="size_name">Size Name</string>
    <string name="_6">$6</string>
    <string name="search">search</string>
    <string name="menu_order">Order</string>
    <string name="save">Save</string>
    <string name="order_number">Order number</string>
    <string name="order_comment">Order comment</string>
    <string name="status_placed">Status: Placed</string>
    <string name="name_david">Name: David</string>
</resources>