<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_home" />
    </group>
    <group android:id="@+id/orders_group">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_view_order"
            android:title="@string/menu_order" />

    </group>
    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_sign_out" />
    </group>
</menu>