<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="16dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/order_img"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_order_date"
                android:text="Order Date:26/10/2021 13:05:56 pm"
                android:fontFamily="@font/brandon_medium"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_number"
                android:text="@string/order_number"
                android:fontFamily="@font/brandon_medium"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_name"
                android:text="@string/name_david"
                android:fontFamily="@font/brandon_medium"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_status"
                android:text="@string/status_placed"
                android:fontFamily="@font/brandon_medium"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_nb_item"
                android:text="Num of items: 10"
                android:fontFamily="@font/brandon_medium"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>